2010-11-27  Frank Kober  <goemusic@yahoo.fr>
	* arpwidget.*, midiarp.*: new latch mode implemented. When latch button 
	is checked, released notes are removed only after 200ms. If within
	this period all notes are released, the note buffer is latched.
	It gets unlatched when pressing the footswitch or unchecking the
	latch button.
	* arpscreen.cpp, seqdriver.*, mainwindow.cpp, midiarp.*: follower 
	line now governed by midiarp.
	
2010-11-13  Frank Kober  <goemusic@yahoo.fr>
	* lfowidget.*: copyToCustom button removed, copying is done upon
	first leftclick on lfoscreen. WaveFormBox and Frequency get MIDI 
	learn.
	* arpwidget.*: random and envelope boxes made checkable. Controls
	hidden by default.
	* mainwindow.cpp, arpwidget.cpp: keyboard shortcuts made unique
	* seqwidget.cpp: note and velocity input made independent again
	* *screen.*: gray background when muted
	* *widget.*, midi*.*, mainwindow.cpp: some members renamed, consistency

2010-11-11  Frank Kober  <goemusic@yahoo.fr>
	* midilfo.*, mainwindow.cpp, arpdata.*: alsalib headers removed
	* seqdriver.*, midiarp.*, arpscreen.cpp: fixed keyboard input latency.
	midiarp reacted very slowly to input note events. It basically took 
	two arpeggio steps to hear changes played on the keyboard affecting 
	the arpeggio:
	  o Output notes were scheduled very early into the alsa queue, i.e. 
	    upon the last output note (1 step of latency)
	  o The scheduled notes took into account the note buffer state at 
	    the step before (1 step of latency).
	Both delays are now squeezed. 1) Notes are scheduled only 8 alsa ticks
	before they go out. 2) The note buffer state is taken into account
	at the time they are scheduled. The arp is now playable live without 
	hicks.
	* arpwidget.*, arpdata.cpp: presetSelection added to MIDI controllables

2010-02-16  Frank Kober  <goemusic@yahoo.fr>
	* midilfo.cpp: fixed data storage inconsistency

2010-02-15  Frank Kober  <goemusic@yahoo.fr>